<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F3FAFE">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rl_main"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/iv_main_logo"
            android:src="@drawable/logo"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/iv_main_logo"
            android:id="@+id/et_main_login"
            android:background="@drawable/et_style_border"
            android:hint="@string/login"
            android:layout_marginTop="48dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/et_main_login"
            android:id="@+id/et_main_pas"
            android:background="@drawable/et_style_border"
            android:hint="@string/password"
            android:layout_marginTop="12dp"/>
        
        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/et_main_pas"
            android:background="@drawable/btn_blue"
            android:id="@+id/btn_main_signin"
            android:layout_marginTop="24dp"
            android:text="@string/signin"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/forgot_password"
        android:background="#F3FAFE"
        android:id="@+id/btn_main_forgot"
        android:layout_marginLeft="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/registration"
        android:background="#F3FAFE"
        android:id="@+id/btn_main_registration"
        android:layout_marginRight="8dp"/>

</RelativeLayout>
