<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.balinasoft.cartalk.RegistrationActivity"
    android:background="#F3FAFE">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="#2196F3"
        android:id="@+id/rl_registration_header">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_registration_back"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/header_registration_activity_text"
            android:textSize="24dp"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"
            android:id="@+id/tv_registration_header"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/btn_registration_ok"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_ok"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rl_registration_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rl_registration_content">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_download_image"
                android:layout_marginTop="8dp"
                android:text="@string/download_image"
                android:id="@+id/btn_regisstration_download_img"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/btn_regisstration_download_img"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_fio"
                android:id="@+id/et_registration_fio"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/et_registration_fio"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_email"
                android:id="@+id/et_registration_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/et_registration_email"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_phone_number"
                android:id="@+id/et_registration_phone_number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/et_registration_phone_number"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_login"
                android:id="@+id/et_registration_login"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/et_registration_login"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_password"
                android:id="@+id/et_registration_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/et_registration_password"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_confirm_password"
                android:id="@+id/et_registration_confirm_password"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/et_registration_confirm_password"
                android:layout_marginTop="16dp"
                android:text="@string/data_for_auto"
                android:id="@+id/tv_registation_data_auto"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@+id/tv_registation_data_auto"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_style_border"
                android:hint="@string/input_model_auto"
                android:id="@+id/et_registration_model_auto"/>

            <LinearLayout
                android:id="@+id/ll_registration_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/et_registration_model_auto"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/et_style_border"
                    android:hint="@string/input_numper_auto"
                    android:id="@+id/et_registration_number_auto"/>

                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/et_style_border"
                    android:hint="@string/input_color_auto"
                    android:id="@+id/et_registration_color_auto"/>
                
                </LinearLayout>
            
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ll_registration_line"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/add_auto"
                android:layout_marginBottom="24dp"
                android:id="@+id/btn_registration_add_auto"/>
            
            </RelativeLayout>

        </ScrollView>

</RelativeLayout>
