<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.balinasoft.cartalk.ForgotPassword"
    android:background="#F3FAFE">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="#2196F3"
        android:id="@+id/rl_forgot_header">
        
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_forgot_back"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_back"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/header_forgot_activity_text"
            android:textSize="24dp"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"
            android:id="@+id/tv_forgot_header"/>
        
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_forgot_content"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:background="@drawable/et_style_border"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_email"
            android:id="@+id/et_forgot_email"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/et_forgot_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_blue"
            android:text="@string/send_password"
            android:textColor="#FFFFFF"
            android:id="@+id/btn_forgot_send"/>

        </RelativeLayout>

</RelativeLayout>
